--- a/.gitignore
+++ b/.gitignore
@@ -73,8 +73,20 @@
 
 .gitattributes
 
-.texpadtmp
-
 ehthumbs.db
 
 Thumbs.db
+
+# Latex editors #
+
+.texpadtmp
+
+.out
+
+.toc
+
+.bbl
+
+.aux
+
+.blg
